<resources>
    <string name="app_name">FitNep</string>
    <string name="login_title">Login to FitNep</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="register_title">Join FitNep</string>
    <string name="name_hint">Full Name</string>
    <string name="register_button">Register</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="bmi_calculator_title">BMI Calculator</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="height_hint">Height (m)</string>
    <string name="calculate_save_button">Calculate &amp; Save</string>
    <string name="bmi_format">BMI: %.2f</string>
    <string name="status_format">Status: %1$s</string>
    <string name="date_format">Date: %1$s</string>
    <string name="welcome_message">Welcome!</string>
    <string name="logout_button">Logout</string>
    <string name="workouts_label">Workouts</string>
    <string name="bmi_label">BMI Calculator</string>
    <string name="exercises_label">Exercises</string>
    <string name="profile_label">Profile</string>
    <string name="bmi_saved_success">BMI saved successfully</string>
    <string name="input_error_bmi">Please enter weight and height</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="registration_success">Registration successful</string>
    <string name="workouts">Workouts</string>
    <string name="add_workout">Add Workout</string>
    <string name="workout_title">Workout Title</string>
    <string name="duration">Duration (e.g., 30 mins)</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="please_enter_title">Please enter a title</string>
    <string name="error_occurred">An error occurred</string>
    <string name="exercises">Exercises</string>
</resources>
